[package]
name = "rest_numeros"
version = "0.1.0"
authors = ["Bryan Edgar <chicaizabryan1dmat@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.3"
num-traits = "0.2"
substring = "1.4.5"
self = "0.0.0"
ilog2 = "0.2.2"